assets/css/index.css
.overallwrap{
  margin: 0;
  padding: 0;
  font-family: 'Handlee', sans-serif, arial;
  color: #222222;
  font-size: 100%;
  /*height: 2000px;*/
  position: relative;
  min-width: 100%;
  background-color: white;
  max-width: 100%;
}


.mcontainer{
  margin: auto;
  width: 100%;
  font-family: 'Amatic SC', sans-serif, arial;
  color: #222222;
  min-width: 100%;
  text-align: center;
}


.fixed-nav-bar {
  position: fixed;
  top: 0;
  left: 0;
  z-index: 9999;
  width: 100%;
  height: 41.5px;
  background-color: #222222;
  font-family: 'Amatic SC', sans-serif, arial;  
  text-transform: uppercase;
  text-align: center;
  font-weight: less bold;
  font-size: 190%;
  letter-spacing: 5px;
  min-width: 100%;
}

.nav li{
display:inline;
}

.nav a{
text-decoration:none;
padding: 0 1%;
}

a:link, a:visited{
color: #ffffff;
background-color:auto;
text-decoration: none;
}

a:hover{
color:#00d4f2;
}

a:active{
color:#222222;
}


A.links2 {color:#222222;}
A.links2:link {text-decoration: none; color: #222222;}
A.links2:visited {text-decoration: none; color: #222222;}
A.links2:hover {text-decoration: none; color: #00d4f2;}
A.links2:active {text-decoration: none; color: #222222;}

A.links3 {color:#222222;}
A.links3:link {text-decoration: underline; color: #222222;}
A.links3:visited {text-decoration: none; color: #222222;}
A.links3:hover {text-decoration: none; color: #00d4f2;}
A.links3:active {text-decoration: none; color: #222222;}


.index-header{
  margin: auto;
  width: 90%;
  min-width: 90%;  
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 800%;
  color: #00d4f2;
  font-weight: less bold;
  letter-spacing: 45px;
  text-align: center;
  margin-top: 3%;
  margin-left: 7%;
  text-transform: uppercase;
}

.index-subtitle{
  margin: auto;
  width: 100%;
  min-width: 100%;
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 280%;
  color: #222222;
  letter-spacing: 5px;
  text-align: center;
}


.about-title{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size:700%;
  color: #00d4f2;
  text-transform: uppercase;
  text-align: center;
  letter-spacing: 15px;
  margin-top: 3%;
}

.about-subtitle{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 100%;
  color: #00d4f2;
  text-align: center;
  text-transform: uppercase;
  margin-right: 1%;
  letter-spacing: 8px;
  min-width: 10%;
  font-weight: bold;
}

.capture-title{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size:700%;
  color: #00d4f2;
  text-align: center;
  letter-spacing: 30px;
  text-transform: uppercase;
  margin-top: 3%;
  margin-left: 4%;
}

.motion-title{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size:700%;
  color: #00d4f2;
  letter-spacing: 20px;
  text-align: center;
  text-transform: uppercase;
  margin-top: 3%;
}

.write-title{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size:700%;
  color: #00d4f2;
  text-transform: uppercase;
  text-align: center;
  letter-spacing: 15px;
  margin-top: 3%;
}

.write-subtitle{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 500%;
  color: #00d4f2;
  text-transform: none;
  text-align: center;
  letter-spacing: 2px;
  text-decoration: none;
  margin-top: 5%;
}

.write-date{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 250%;
  color: #222222;
  text-transform: none;
  text-align: center;
  letter-spacing: 2px;
}

.write-photo{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 200%;
  text-align: center;
}

.write-content{
  font-family: 'Bitter', sans-serif, arial;
  font-size: 90%;
  color: #222222;
  width: 47%;
  min-width: 47%;  
  border: #222222 0px solid;
  margin-left: 25%;
  margin: auto;
  word-spacing: 2px;
  text-align: center;
}

.write-archive{
  font-family: 'Bitter', sans-serif, arial;
  font-size: 200%;
  color: #222222;
  text-align: center;
  margin-bottom: 10%;
}

.write-sub-sub{
  font-weight: bolder;
  font-size: 95%;
}


.nav-arrows{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 300%;
  text-align: center;
  width: 10%;
  margin-left: 45%;
  margin-top: 5%;
  margin-bottom: -5%;
  
}


.contact-title{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size:700%;
  color: #00d4f2;
  letter-spacing: 15px;
  text-align: center;
  text-transform: uppercase;
  margin-top: 3%;
}

.contact-subheader{
  font-family: 'Amatic SC', sans-serif, arial;
  min-width: 100%;
  width: 100%;
  font-size: 200%;
  color: #00d4f2;
  text-align: center;
  text-transform: uppercase;
  letter-spacing: 8px;
  margin-right: 1%;
  font-weight: bold;
}

.subtitlelinks{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 90%;
  color: #222222;
  text-align: center;
  margin-right: 1%;
  text-transform: uppercase;
  min-width: 100%;
  width: 100%;
}

.ea{
  font-family: 'Bitter', sans-serif, arial;
  font-size: 130%;
  color: #222222;
  text-align: center;
  text-transform: lowercase;
  margin: auto;
  min-width: 40%;
  width: 40%;
}

.ea2{
  font-family: 'Bitter', sans-serif, arial;
  font-size: 130%;
  color: #222222;
  text-align: center;
  text-transform: lowercase;
  margin: auto;
  min-width: 40%;
  width: 40%;
}

.ea3{
  font-family: 'Bitter', sans-serif, arial;
  font-size: 130%;
  text-align: center;
  text-transform: lowercase;
  margin: auto;
  min-width: 40%;
  width: 40%;
}

.mailchimp{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 150%;
  color: #222222;
  text-align: center;
  text-transform: uppercase;
  margin: auto;
  min-width: 20%;
  width: 20%;
}  

.about-photo{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 120%;
  color: #222222;
  margin: auto;
  min-width: 100%;
  width: 100%;
  border: white 2px solid;
  text-align: center;
}

.bio{
  font-family: 'Bitter', sans-serif, arial;
  font-size: 90%;
  color: #222222;
  width: 40%;
  min-width: 40%;  
  border: #222222 0px solid;
  margin-left: 25%;
  margin: auto;
  word-spacing: 2px;
}

.livecaptureappreciate{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 160%;
  color: #222222;
  text-align: center;
  text-transform: uppercase;
  word-spacing: 5px;
  margin-right: 1%;
}

.kellychauphotography{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 200%;
  color: #222222;
  text-align: center;
  text-transform: uppercase;
  word-spacing: 5px;
  margin-right: 1%;
}

.kcplogo{
  text-align: center;
}

.twitter-feed{
  font-family: 'Amatic SC', sans serif, arial;
  font-size: 500%;
  color: #00d4f2;
  letter-spacing: 20px;
  text-align: center;
  text-transform: uppercase;
}

.instagram-feed{
  font-family: 'Amatic SC', sans serif, arial;
  font-size: 500%;
  letter-spacing: 20px;
  text-align: center;
  text-transform: uppercase;
  color: #00d4f2;
  margin-bottom: 12%;
}


.footercontent{
  font-family: 'Amatic SC', sans-serif, arial;
  font-size: 150%;
  color: white;
  text-transform: uppercase;
  text-align: center;
  letter-spacing: 5px;
}

